# mihoyo-widget

./: .gitignore  .versionrc.cjs  CONTEXT.md  Cargo.toml  README.md  commitlint.config.cjs  package-lock.json  package.json
.claude/commands/: release.md
.claude/rules/: dev-flow.md  tray-icon-id.md
.claude/skills/mihoyo-dev-flow/: SKILL.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/src/: lib.rs
docs/adr/: 0001-duplicate-api-client-over-extract.md  0002-single-kv-cache-table.md  0003-notification-config-driven-rules.md  0004-version-management-and-release-process.md
docs/specs/: 2026-06-24-notification-mode.md  2026-06-25-onboarding-data-dir-token.md  2026-06-25-settings-redesign-drilldown.md
